--- a/test/vsproject/cwsw_evqueue_test.vcxproj
+++ b/test/vsproject/cwsw_evqueue_test.vcxproj
@@ -54,7 +54,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <MultiProcessorCompilation>false</MultiProcessorCompilation>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
-      <AdditionalIncludeDirectories>..\..\cfg_cwsw;..\..\cfg_cwsw\vs2010;..\..\cfg_tedlos;..\..\cwsw_lib\inc;..\..\cwsw_arch\inc\i386;..\..\cwsw_board\none\;..\..\cwsw_board\common\;..\..\cwsw_eventqueue\cwsw_event\inc;..\..\cwsw_eventqueue\cwsw_evqueue\inc;..\..\cwsw_eventqueue\cwsw_evqueue_ex\inc;..\..\cwsw_evqueue_test\cwsw_clock\inc;..\..\cwsw_evqueue_test\cwsw_swtimer\inc;..\..\cwsw_clock_services\cwsw_clock\inc;..\..\cwsw_clock_services\cwsw_swtimer\inc;..\..\cwsw_sme\inc;..\..\os-board-fusion\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\app;..\..\cfg_cwsw;..\..\cfg_cwsw\vs2010;..\..\cfg_tedlos;..\..\cwsw_arch\inc\i386;..\..\cwsw_board\none\;..\..\cwsw_board\common\;..\..\cwsw_clock_services\cwsw_clock\inc;..\..\cwsw_clock_services\cwsw_swtimer\inc;..\..\cwsw_eventqueue\cwsw_event\inc;..\..\cwsw_eventqueue\cwsw_evqueue\inc;..\..\cwsw_eventqueue\cwsw_evqueue_ex\inc;..\..\cwsw_evqueue_test\cwsw_clock\inc;..\..\cwsw_evqueue_test\cwsw_swtimer\inc;..\..\cwsw_lib\inc;..\..\cwsw_sme\inc;..\..\os-board-fusion\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <CompileAsManaged>false</CompileAsManaged>
       <ExceptionHandling>false</ExceptionHandling>
       <DisableSpecificWarnings>4127</DisableSpecificWarnings>
@@ -96,7 +96,7 @@
     <ClCompile Include="..\..\app\tedlos_scheduler.c" />
     <ClCompile Include="..\..\cwsw_arch\src\i386\cwsw_arch.c" />
     <ClCompile Include="..\..\cwsw_sme\src\cwsw_sme.c" />
-    <ClCompile Include="..\..\cwsw_board\common\src\cwsw_buttons.c" />
+    <ClCompile Include="..\..\cwsw_board\common\src\cwsw_bsp_buttons.c" />
     <ClCompile Include="..\..\cwsw_board\none\src\cwsw_board.c" />
     <ClCompile Include="..\..\cwsw_clock_services\cwsw_clock\src\cwsw_clock_svc.c" />
     <ClCompile Include="..\..\cwsw_clock_services\cwsw_swtimer\src\cwsw_swtimer.c" />
@@ -115,6 +115,7 @@
     <ClInclude Include="..\..\app\app-di-buttons.h" />
     <ClInclude Include="..\..\app\app-do-lamps.h" />
     <ClInclude Include="..\..\app\console_keyin.h" />
+    <ClInclude Include="..\..\app\cwsw_bsp_buttons_cfg.h" />
     <ClInclude Include="..\..\app\stoplite.h" />
     <ClInclude Include="..\..\app\tedlos.h" />
     <ClInclude Include="..\..\app\tedlos_scheduler.h" />
@@ -125,7 +126,7 @@
     <ClInclude Include="..\..\cwsw_arch\inc\cwsw_arch_common.h" />
     <ClInclude Include="..\..\cwsw_arch\inc\i386\cwsw_arch.h" />
     <ClInclude Include="..\..\cwsw_arch\inc\i386\peripheral\ports\ports_api.h" />
-    <ClInclude Include="..\..\cwsw_board\common\cwsw_buttons.h" />
+    <ClInclude Include="..\..\cwsw_board\common\cwsw_bsp_buttons.h" />
     <ClInclude Include="..\..\cwsw_board\cwsw_board_common.h" />
     <ClInclude Include="..\..\cwsw_board\none\cwsw_board.h" />
     <ClInclude Include="..\..\cwsw_clock_services\cwsw_clock\inc\cwsw_clock.h" />
