--- a/test/ecproject/.cproject
+++ b/test/ecproject/.cproject
@@ -57,25 +57,7 @@
                                 								
                                 <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.compiler.option.include.paths.1447331829" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
                                     									
-                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../os-board-fusion&quot;"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../cfg_cwsw&quot;"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../cfg_tedlos&quot;"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../cwsw_clock_services/cwsw_clock/inc&quot;"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../cwsw_clock_services/cwsw_swtimer/inc&quot;"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../cwsw_eventqueue/cwsw_event/inc&quot;"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../cwsw_eventqueue/cwsw_evqueue/inc&quot;"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../cwsw_eventqueue/cwsw_evqueue_ex/inc&quot;"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../cwsw_board/bd_gtk&quot;"/>
-                                    									
-                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../cwsw_board/common&quot;"/>
+                                    <listOptionValue builtIn="false" value="&quot;${MINGW_HOME}/include/harfbuzz&quot;"/>
                                     								
                                 </option>
                                 								
@@ -115,6 +97,8 @@
                                     									
                                     <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../cfg_cwsw&quot;"/>
                                     									
+                                    <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../cwsw_cfg&quot;"/>
+                                    									
                                     <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../cfg_tedlos&quot;"/>
                                     									
                                     <listOptionValue builtIn="false" value="&quot;${ProjDirPath}/../../cwsw_lib/inc&quot;"/>
@@ -152,6 +136,8 @@
                                     <listOptionValue builtIn="false" value="&quot;${MINGW_HOME}/include/gdk-pixbuf-2.0&quot;"/>
                                     									
                                     <listOptionValue builtIn="false" value="&quot;${MINGW_HOME}/include/atk-1.0&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${MINGW_HOME}/include/harfbuzz&quot;"/>
                                     								
                                 </option>
                                 								
@@ -186,6 +172,8 @@
                                 <option id="gnu.cpp.link.option.flags.2007219169" name="Linker flags" superClass="gnu.cpp.link.option.flags" useByScannerDiscovery="false" value="`pkg-config --libs gtk+-3.0`" valueType="string"/>
                                 								
                                 <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.link.option.libs.1884585035" name="Libraries (-l)" superClass="gnu.cpp.link.option.libs" useByScannerDiscovery="false" valueType="libs">
+                                    									
+                                    <listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="harfbuzz"/>
                                     									
                                     <listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="gtk-3"/>
                                     									
@@ -247,26 +235,6 @@
                         					
                     </folderInfo>
                     					
-                    <folderInfo id="cdt.managedbuild.config.gnu.mingw.exe.debug.1736302436.1102236655" name="/" resourcePath="cwsw_eventqueue/test">
-                        						
-                        <toolChain id="cdt.managedbuild.toolchain.gnu.mingw.exe.debug.681394710" name="MinGW GCC" superClass="cdt.managedbuild.toolchain.gnu.mingw.exe.debug" unusedChildren="">
-                            							
-                            <tool id="cdt.managedbuild.tool.gnu.assembler.mingw.exe.debug.1282582647" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.mingw.exe.debug.955745680"/>
-                            							
-                            <tool id="cdt.managedbuild.tool.gnu.archiver.mingw.base.1165208901" name="GCC Archiver" superClass="cdt.managedbuild.tool.gnu.archiver.mingw.base.1004530742"/>
-                            							
-                            <tool id="cdt.managedbuild.tool.gnu.cpp.compiler.mingw.exe.debug.1825045741" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.mingw.exe.debug.1050297134"/>
-                            							
-                            <tool id="cdt.managedbuild.tool.gnu.c.compiler.mingw.exe.debug.1710682094" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.mingw.exe.debug.1489450762"/>
-                            							
-                            <tool id="cdt.managedbuild.tool.gnu.c.linker.mingw.exe.debug.293552603" name="MinGW C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.mingw.exe.debug.1268148108"/>
-                            							
-                            <tool id="cdt.managedbuild.tool.gnu.cpp.linker.mingw.exe.debug.681947779" name="MinGW C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.mingw.exe.debug.1051958027"/>
-                            						
-                        </toolChain>
-                        					
-                    </folderInfo>
-                    					
                     <sourceEntries>
                         						
                         <entry excluding="app/console_keyin.c|os-board-fusion/none|os-board-fusion/bd_lwcvi|component/cwsw_event/test|cwsw_board/bd_lwcvi|libs/cwsw_arch/test|libs/cwsw_eventqueue/test|component/cwsw_event/test/cwsw_lib/test|bsw/svc/cwsw_event/test/cwsw_lib/test/ut|component/cwsw_sme/src/cwsw_sme.template.c|src|cwsw_lib/test|libs/cwsw_swtimer|libs/cwsw_lib/test|bsw/svc/cwsw_event/test/nbproject|bsw/evq/src/cwsw_evhandler.c|cwsw_board/none|component/test|cwsw_arch/test|cwsw_sme/src/cwsw_sme.template.c|cwsw_eventqueue/test|libs/cwsw_board/bd_lwcvi|bsw/svc/cwsw_event/test/ecproject|bsw/svc/cwsw_swtimer/src/cwsw_swtimer.c|libs/cwsw_arch_old|bsw/svc/cwsw_clock/src/cwsw_clock_svc.c|bsw/ecu/cwsw_arch/test|libs/cwsw_clock|bsw/svc/cwsw_event/test|bsw/svc/cwsw_evq/test|bsw/svc/cwsw_event/test/app|bsw/svc/cwsw_event/test/vsproject|bsw/svc/cwsw_lib/test|cwsw_clock_services/cwsw_swtimer/test|cwsw_clock_services/cwsw_clock/test|libs/cwsw_board/none|libs/cwsw_board_old" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
@@ -310,6 +278,8 @@
                         <entry flags="UNDEFINED" kind="libraryFile" name="pangocairo-1.0" srcPrefixMapping="" srcRootPath=""/>
                         						
                         <entry flags="UNDEFINED" kind="libraryFile" name="pango-1.0" srcPrefixMapping="" srcRootPath=""/>
+                        						
+                        <entry flags="UNDEFINED" kind="libraryFile" name="harfbuzz" srcPrefixMapping="" srcRootPath=""/>
                         						
                         <entry flags="UNDEFINED" kind="libraryFile" name="atk-1.0" srcPrefixMapping="" srcRootPath=""/>
                         						
@@ -372,6 +342,8 @@
                         <entry flags="NONE" kind="includePath" name="${MINGW_HOME}/include/gdk-pixbuf-2.0"/>
                         						
                         <entry flags="NONE" kind="includePath" name="${MINGW_HOME}/include/atk-1.0"/>
+                        						
+                        <entry flags="NONE" kind="includePath" name="${MINGW_HOME}/include/harfbuzz"/>
                         					
                     </externalSetting>
                     				
