--- a/test/ecproject/.project
+++ b/test/ecproject/.project
@@ -56,6 +56,11 @@
 			<locationURI>$%7BPARENT-2-PROJECT_LOC%7D/cwsw_board</locationURI>
 		</link>
 		<link>
+			<name>cwsw_cfg</name>
+			<type>2</type>
+			<locationURI>$%7BPARENT-2-PROJECT_LOC%7D/cwsw_cfg</locationURI>
+		</link>
+		<link>
 			<name>cwsw_clock_services</name>
 			<type>2</type>
 			<locationURI>$%7BPARENT-2-PROJECT_LOC%7D/cwsw_clock_services</locationURI>
